navbar z-index fix

--- a/BITE/css/styles.css
+++ b/BITE/css/styles.css
@@ -162,7 +162,7 @@ background-color: #000;
 min-height: 65px;
 position: fixed;
 width: 100%;
-z-index: 10;
+z-index: 1000;
 top: 0;
 }
 a.selected {
